sec_Diskussion: stichprobe

--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -1,19 +1,31 @@
 % ---------------------------------------
-\subsection{TBD: Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
-Auf die Beantwortung der Fragestellung, ob der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten einen Zusammenhang bilden würde und ob dieses Verhalten einen Effekt auf das subjektive Wohlbefinden ausüben würde, soll in diesem Abschnitt eingegangen werden.
+\subsection{Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
+Auf die Beantwortung der Fragestellung, ob der Bindungsstil und das aktuelle Stressempfinden der Eltern auf das im Beisein der Kinder praktizierte Medienverhalten einen Zusammenhang bilden würde und ob dieses Verhalten einen Effekt auf das subjektive Wohlbefinden ausübt, soll in diesem Abschnitt eingegangen werden.
 
-Gemäss den Ergebnissen dieser Untersuchung konnte kein direkter Zusammenhang zwischen dem Bindungsstil der Eltern, unterteilt nach sicher und unsicher gebunden, auf das Medienverhalten im Beisein der Kinder festgestellt werden. Es kann auch kein Zusammenhang festgestellt werden, wenn die Mediennutzung anhand der Nutzung, ob das Kind während der Betreuung wach war oder geschlafen hat, unterteilt wird.  Zudem scheint der Faktor Stress keinen zusätzlichen Effekt auf die Mediennutzung auszuüben.
+Gemäss den Ergebnissen dieser Untersuchung konnte kein direkter Zusammenhang zwischen dem Bindungsstil der Eltern, unterteilt nach sicher und unsicher gebunden, auf das Medienverhalten der Eltern im Beisein ihrer Kinder festgestellt werden. Es kann auch dann kein Zusammenhang festgestellt werden, wenn die Mediennutzung anhand der Nutzung, ob das Kind während der Betreuung wach war oder geschlafen hat, unterteilt wird.  Zudem scheint der Faktor Stress in keinem zusätzlichen Zusammenhang mit der Mediennutzung zu stehen. Aus den vorliegenden Daten stehen demzufolge Bindung und Stress in keinem Zusammenhang mit dem Medienverhalten der Eltern, während der Betreuung ihrer Kinder.
 
-Des Weiteren konnte kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiv erlebten Wohlbefinden gefunden werden. Es kann davon ausgegangen werden, dass Medienverhalten und Wohlbefinden in diesem Fall keinen Zusammenhang bilden.
+Des Weiteren konnte kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiv erlebten Wohlbefinden er Eltern gefunden werden. Es kann davon ausgegangen werden, dass Medienverhalten und Wohlbefinden in der vorliegenden Stichprobe keinen Zusammenhang bilden.
 
-Die Fragestellung setzt sich aus den vier Hypothesen zusammen, die einzelne Aspekte davon explizit beleuchten. Gemäss den Ergebnissen mussten alle vier Hypothesen abgelehnt werden und es gelten die Alternativhypothesen. Demzufolge geht gemäss Hypothese 1 ein sicherer Bindungsstil, verglichen mit einem unsicheren Bindungsstil, nicht mit einer geringeren Mediennutzung von Seiten der Eltern einher. Für Hypothese 2 scheint Stress kein Prädiktor für eine erhöhte Mediennutzung während der Betreuung der Kinder zu sein. Eine erhöhte Mediennutzung während der Betreuung, gemäss Hypothese 3, geht nicht mit einem geringeren subjektiven Wohlbefinden einher und ein sicherer Bindungsstil und ein tiefes Stressempfinden schlägt sich nicht in der geringeren Mediennutzung nieder.
+Die Fragestellung setzt sich aus den vier Hypothesen und der Grundhypothese zusammen, die einzelne Aspekte davon explizit beleuchten. Gemäss den Ergebnissen mussten alle vier Hypothesen abgelehnt werden und es gelten die Alternativhypothesen. Dementsprechend musste die Grundhypothese ebenfalls abgelehnt werden, da sich diese aus den vier Hypothesen zusammensetzte. Gemäss Hypothese $H1$ geht ein sicherer Bindungsstil, verglichen mit einem unsicheren Bindungsstil, nicht mit einer geringeren Mediennutzung von Seiten der Eltern einher. Für Hypothese $H2$ scheint Stress kein Prädiktor für eine erhöhte Mediennutzung während der Betreuung der Kinder zu sein. Eine erhöhte Mediennutzung während der Betreuung, gemäss Hypothese $H3$, geht nicht mit einem geringeren subjektiven Wohlbefinden einher und ein sicherer Bindungsstil und ein tiefes Stressempfinden von Hypothes $H4$ schlägt sich nicht in der geringeren Mediennutzung nieder.
 
-Aus diesen Hypothesen scheint sich ableiten zu lassen, dass die Bindung und der Stress der Eltern während der Betreuung von ihren Kindern keine Moderationsfunktion für die Mediennutzung  einnehmen. Zudem scheint sich die Mediennutzung nicht im subjektiven Wohlbefinden zu spiegeln. 
+Aus diesen Hypothesen scheint sich ableiten zu lassen, dass die Bindung der Eltern während der Betreuung von ihren Kindern und deren subjektiv erlebter Stress keine Moderationsfunktion für die Mediennutzung  einnehmen. Auch scheint sich die Mediennutzung nicht im subjektiven Wohlbefinden der Eltern zu spiegeln.
 
 % ---------------------------------------
 \subsection{TBD: Interpretation} \label{sec:Interpretation}
+Hat nun die Bindung keinen Zusammenhang mit der Mediennutzung der Eltern und wird diese nicht auch vom Stress moderiert? Lässt sich zudem kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das folgende Kapitel soll auf einzelne Aspekte näher eingehen und diese zu beantworten versuchen.
+
+\subsubsection{Interpretation anhand der Stichprobe}\label{sec:InterpretationStichprobe}
+Knapp 91\% der Studienteilnehmer*innen sind weiblich. Nur gerade mal 19 Teilnehmer haben an der Befragung teilgenommen. Diese ungleiche Verteilung könnte unterschiedlich Begründet werden. Einerseits scheint die Rollenverteilung bei der Erziehung von Kleinkindern nach wie vor stärker dem weiblichen Elternteil zuzufallen. Gemäss \citeA{Bien2006} leben zwei drittel der Mütter in Deutschland nach dem traditionellen Familienmodell. Ein weiterer Grund könnte sein, dass der Anreiz der Gutscheine für Männer weniger interessant gewesen ist. Zudem könnte sein, dass Männer generell weniger Interesse an Umfragen haben und deshalb weniger an solchen Studien teilnehmen. Obwohl der ungleichen Verteilung konnte die Fragestellung beantwortet werden, da im Vorfeld kein Einfluss des Geschlechts postuliert wurde.
+
+Ein weiteres auffälliges Merkmal der Stichprobe ist das hohe Bildungslevel der Befragten. 60.6\% gaben an einen Abschluss im tertiären Sektor zu besitzen und 36.2\% gaben an einen Bildungsabschluss im Sekundar II Sektor gemacht zu haben. Gemäss \citeA{Bfs2017} aus dem Jahre 2017 in der Altersgruppe von 25 bis 34 Jährigen haben in der Schweiz 41.8\% einen Sekundar II Abschluss und 50.2\% einen Abschluss auf Tertiärstufe. Die Stichprobe liegt demzufolge leicht über dem schweizerischen Schnitt. Dies könnte auf die starke Rekrutierung aus dem privaten Umfeld des Autors zurückzuführen sein. Zudem scheint die hohe Bildung mit dem Durchschnittsalter der Stichprobe von 33.9 Jahren einher zu gehen. Gemäss \citeA{Bfs2017a} sind  Frauen und Männer mit einer Tertiärbildung tendenziell über 30 Jahre bei ihrem ersten Kind. Obwohl diese Zuordnung nachträglich nicht mehr möglich ist, so kann basierend auf der durchschnittlichen Personen im Haushalt von 3.6 davon ausgegangen werden, dass sich die Stichprobe im Schweizer Mittel bewegt. Ob sich die Bildung, das Einkommen und das Alter auf die Ergebnisse dieser Arbeit auswirken ist schwer zu sagen. Gemäss \citeA{Livingstone2015} haben höher gebildete Eltern mehr Vertrauen in ihre digitalen Fähigkeiten im Umgang mit Medien. Zudem scheinen höher gebildete Eltern mit einem höheren Einkommen digitale Aktivitäten mit ihrem Nachwuchs eher zu reglementieren. Des Weitern sind Soziodemografische Merkmale wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}. Dies scheint in direktem Zusammenhang mit dieser Studie zu stehen. Demzufolge könnten die hohen Bildungsabschlüsse und die hohen Einkommen protektiv auf die Mediennutzung der Eltern im Beisein der Kinder wirken. 
+
+\subsubsection{TBD: Interpretation anhand der Mediennutzung}
+
+\subsubsection{TBD: Interpretation anhand der Bindung}
+Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte. Bindung AAS im Vergleich zu den Zahlen von Strange-Situation-Test setzen.
+
+
 \begin{itemize}
-    \item demographische daten der Stichprobe (Bildung, Geschlecht, etc.)
     \item Mediennutzung interpretieren
     \item Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte. Bindung AAS im Vergleich zu den Zahlen von Strange-Situation-Test setzen.
     \item PSQ
