Anhang: Rekrutierung Adressen abgeschlossen

--- a/content/Anhang/Rekrutierung.tex
+++ b/content/Anhang/Rekrutierung.tex
@@ -1,13 +1,20 @@
 Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
 \begin{itemize}
     \item \textit{Tabelle \ref{table:AppRekrutierungElernebratungsstellen} \nameref{table:AppRekrutierungElernebratungsstellen}}
-    \item \textit{Tabelle \ref{table:AppRekrutierung} \nameref{table:AppRekrutierung}}
+    
+    \item \textit{Tabelle \ref{table:AppRekrutierungFamilienzentren} \nameref{table:AppRekrutierungFamilienzentren}}
+    
+    \item \textit{Tabelle \ref{table:AppRekrutierungElternbildung} \nameref{table:AppRekrutierungElternbildung}}
+    
+    \item \textit{Tabelle \ref{table:AppRekrutierungSpitaeler} \nameref{table:AppRekrutierungSpitaeler}}
+    
+    \item \textit{Tabelle \ref{table:AppRekrutierungDivers} \nameref{table:AppRekrutierungDivers}}
 \end{itemize}
 
 
 %Table Elternberatungsstellen
 \begin{longtable}[htbp]{|p{0.2em} p{20em} | c | c |} 
-  \caption{Elternberatungsstellen} \label{table:AppRekrutierungElernebratungsstellen}\\
+  \caption{Rekrutierung Elternberatungsstellen} \label{table:AppRekrutierungElernebratungsstellen}\\
   \hline
   \rowcolor{lightgray}
   \multicolumn{4}{|l|}{Elternberatungsstellen via Fachverband Mütter und Väterberatung \cite{Sfmvb2018a}}\\
@@ -50,7 +57,7 @@ Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
   \multicolumn{2}{|l|}{Basel Stadt} & Mail & Flyer\\
   & (info@elternberatungbasel.ch) & & \\
   \multicolumn{2}{|l|}{Sektion Bern (geschaeftsleitung@mvb-be.ch)} & Mail & k.R.\\
-  & Bezirk Bern Mittellan (karin.messikommer@mvb-be.ch) & Mail & k.R. \\
+  & Bezirk Bern Mittelland (karin.messikommer@mvb-be.ch) & Mail & k.R. \\
   & Bezirk Emmental–Oberaargau (emmental-oberaargau@mvb-be.ch) & Mail & k.R. \\
   & Bezirk Jura (jurabernois-seeland@mvb-be.ch) & Mail & Nein \\
   & Bezirk Oberland (oberland@mvb-be.ch) & Mail & k.R. \\
@@ -140,13 +147,14 @@ Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
   & Wipkingen - Arlette.Rutschmann@zuerich.ch & Mail & k.R.\\
 \end{longtable}
 
+% Familienzentren
 
 %Table
 \begin{longtable}[htbp]{|p{0.2em} p{20em} | c | c |} 
-  \caption{Stichprobengewinnung} \label{table:AppRekrutierung}\\
+  \caption{Rekrutierung Familienzentren} \label{table:AppRekrutierungFamilienzentren}\\
   
   \rowcolor{lightgray}
-  \multicolumn{4}{|l|}{Elternberatungsstellen via Fachverband Mütter und Väterberatung \cite{Sfmvb2018a}}\\
+  \multicolumn{4}{|l|}{Familienzentren über Netzwerk Bildung und Familie \cite{NetzwerkBildung2018}}\\
   \hline
   \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
   & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
@@ -155,7 +163,117 @@ Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
  
   \hline
   \rowcolor{lightgray}
-  \multicolumn{4}{|c|}{ Fortsetzung Elternberatungsstellen}\\
+  \multicolumn{4}{|c|}{ Fortsetzung Familienzentren}\\
+  \hline
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  & Familielzentrum Schaffhausen & Priv. & Flyer\\
+  
+  \multicolumn{2}{|l|}{Suchoption Deutschschweiz > 10'000} &  & \\
+  & Zentrum ELCH Frieden, (frieden@zentrumelch.ch) & Mail & k.R.\\
+  & Zentrum ELCH Regensbergstrasse (regensbergstrasse@zentrumelch.ch) & Mail & Flyer\\
+  & Familienzentrum Dübendorf, Elena Beltrame (elena.beltrame@duebendorf.ch) & Mail & Flyer\\
+  & Familienzentrum Karussell Region Baden (info@karussell-baden.ch) & Mail & Flyer\\
+  
+  \multicolumn{2}{|l|}{Suchoption Deutschschweiz 5'000 bis 10'000} &  & \\
+  & Familienzentrum Katzenbach, Andrea Jenzer (andrea.jenzer@gfz-zh.ch) & Mail & Flyer\\
+  & Familienzentrum Bezirk Affoltern (mail@familienzentrum-bezirk-affoltern.ch) & Mail & k.R.\\
+  & Zentrum ELCH Accu (accu@zentrumelch.ch) & Mail & Flyer\\
+  & Quartiertreffpunkte Basel, Claudia Greter (claudia.greter@bs.ch) & Mail & Flyer\\
+  & Eltern Kind Zentrum MaKly (makly@qtp-basel.ch) & Mail & k.R.\\
+  & Familienzentrum Winterthur (info@familienzentrum-winterthur.ch) & Mail & HP, Flyer\\
+  
+  \multicolumn{2}{|l|}{Suchoption Deutschschweiz 1'000 bis 2'000} &  & \\
+  & Familientreff Bern (info@familientreff.ch) & Mail & k.R.\\
+  & Familienzentrum Schlüssel (familienzentrum@rj.sg.ch) & Mail & Flyer\\
+  & Treffpunkt Untermatt (treff.untermatt@bluewin.ch) & Mail & k.R.\\
+  & MüZe Familien- \& Weiterbildungszentrum (info@mueze-muri-guemligen.ch) & Mail & k.R.\\
+  & Spielbaracke Hombrechtikon, Nicola Schätzle (spielbaracke@mojuga.ch) & Mail & Flyer\\
+  & Familienzentrum Region Weinfelden (info@familien-zentrum.ch) & Mail & k.R.\\
+  & Robinsonspielplatz Bostudenzelg (robinson@thun.ch) & Mail & k.R.\\
+  & Eltern-Kind-Zentrum Amriswil, Tiziana Venezia (raumvermietung@ekidz.ch)  & Mail & k.R.\\
+  & Eltern-Kind-Zentrum MEMORY, memory@uetikonamsee.ch & Mail & k.R.\\
+  & Familienzentrum Küsnacht, Christine Fierz (christine.fierz@kuesnacht.ch) & Mail & k.R.\\
+  & FamiPlus Biel (info@famiplus.ch) & Mail & k.R.\\
+  & Eltern-Kind-Zentrum, Esther Schneider-Calderon (elki@maennedorf.ch) & Mail & Flyer\\
+  & Familienzentrum Flüügepil (info@flüügepilz.ch) & Mail & k.R.\\
+  & Familienverein Pfäffikon ZH, Patrizia Cavelti (info@familienverein-pfaeffikon.ch) & Mail & k.R.\\
+  & Mamerlapap Familienzentrum Bülach, Eleonora Tozzi (eleonora.tozzi@gmx.chinfo@mamerlapap.ch) & Mail & Flyer\\
+  & Familie im Zentrum Wetzikon, Marco Müller (info@fizwetzikon.ch) & Mail & k.R.\\
+  & FAZ Familienzentrum Binningen, Susanne Demierre (faz.binningen@bluewin.ch) & Mail & k.R.\\
+  & Familienraum Wallisellen, Susan Wiederkehr (susan.wiederkehr@wallisellen.ch) & Mail & HP, Flyer\\
+  & Familienzentrum Solemio, Rosmarie Gabathuler (info@solemio-sevelen.ch) & Mail & k.R.\\
+  
+\end{longtable}
+
+% Spitäler und Kinderärzte
+\begin{longtable}[htbp]{|p{0.2em} p{20em} | c | c |} 
+  \caption{Rekrutierung Spitäler und Kinderärzte} \label{table:AppRekrutierungSpitaeler}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{4}{|l|}{Spitäler und Kinderärzte}\\
+  \hline
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \rowcolor{lightgray}
+  \multicolumn{4}{|c|}{ Fortsetzung Adressen Spitäler und Kinderärzte}\\
+  \hline
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+   \multicolumn{2}{|l|}{Spitäler} & & \\
+  
+  & Kantonsspital Winterthur (KSW), Geburten\-abteilung & Priv. & Flyer\\
+  
+  & Spitäler Schaffhausen, Stationsleitung Wochenbett (monika.degirmenci@spitaeler-sh.ch) & Mail & k.R.\\
+ 
+  & Universitätsspital Zürich (USZ), Geburtshilfe & Priv. & Flyer\\
+  
+   \multicolumn{2}{|l|}{Kinderärzte Schaffhausen} & & \\
+   & Dr. med. Johannes Sigrist, jsigrist@bluewin.ch & Mail & k.R.\\
+   & Dr. med. Sergio Stocker sergio.stocker@hin.ch & Mail & k.R.\\
+   & Dr. med. Bruno Bolt bruno.bolt(at)shinternet.ch & Priv. & Flyer\\
+   & Dr. med. Claudia Friedlipraxis.c.friedli-knupfer@hin.ch & Mail & Flyer\\
+  
+\end{longtable}
+
+
+% Elternbildung CH
+\begin{longtable}[htbp]{|p{0.2em} p{20em} | c | c |} 
+  \caption{Rekrutierung Elternbildung CH} \label{table:AppRekrutierungElternbildung}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{4}{|l|}{Elternbildung CH \cite{Elternbildung2018}}\\
+  \hline
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \rowcolor{lightgray}
+  \multicolumn{4}{|c|}{ Fortsetzung Elternbildung CH}\\
   \hline
   \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
   & & (Mail / Tel. / Priv.) & (HP / FB / Flyer)\\
@@ -169,7 +287,99 @@ Alle angeschriebenen Institutionen werden in folgenden Tabellen aufgeführt:
   \endlastfoot
   
   
-  \multicolumn{2}{|l|}{Sektion Aargau (info@mvb-aargau.ch)} & Mail & HP, FB\\
-  & Bezirk Rheinfelden (info@muebe.ch) & Mail & k.R.\\
+  \multicolumn{2}{|l|}{Basel-Land} &  & \\
+  & Informationsplattform Elternbildung Basel-Landschaft, Fachstelle Erwachsenenbildung BL, febl@bl.ch & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{Zürich} &  &\\
+  & Geschäftsstelle Elternbildung, ebzh@ajb.zh.ch, Leitung Geschäftsstelle Elternbildung gabriela.leuthard@ajb.zh.ch & Mail & Nein\\
+  
+  \multicolumn{2}{|l|}{Zug} &  &\\
+  & oordinationsstelle Elternbildung , koordinationeb@eff-zett.ch , www.elternbildungzug.ch & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{Thurgau} &  &\\
+  & TAGEO geschaeftsstelle@tageo.ch Diana Bühler Päsidium praesidium@tageo.ch https://www.tageo.ch/home.html & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{Schwyz} &  &\\
+  & familienschwyz.ch -> Kontaktformular & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{Solothurn} &  &\\
+  & Kompass Elternbildung \& Beratung, Irma Bachmann, Koordinatorin Elternbildung (bachmann@kompass-so.ch) & Mail & Flyer\\
+  
+  \multicolumn{2}{|l|}{Schaffhausen} &  &\\
+  & Pro Juventute Schaffhausen und Thurgau, Petra Hotz (gs@projuventute-sh-tg.ch)  & Mail & k.R.\\
+  & Sektion Amriswil / Romanshorn / Arbon, Gertrud Kappeler bischofszell@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion Diessenhofen Cornelia Stäheli, diessenhofen@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion Frauenfeld , Sigrid Wrensch , frauenfeld@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion KreuzlingenFAZ Lilian Höhener , kreuzlingen@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion Münchwilen, Iris Rüesch, muenchwilen@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion Steckborn, Petra Hotz Langenegger, steckborn@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion Stein am Rhein, Monika Fischer, info@projuventute-sh-tg.ch & Mail & k.R.\\
+  & Sektion Weinfelden, Edith Schallenberg, weinfelden@projuventute-sh-tg.ch & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{St. Gallen} &  &\\
+  & Elternbildung Kanton St.Gallen, elternbildung@sg.ch & Mail & Nein\\
+  
+  \multicolumn{2}{|l|}{Obwalden} &  &\\
+  & Fachstelle Gesellschaftsfragen OW , familienfoerderung@ow.ch & Mail & Nein\\
+  
+  \multicolumn{2}{|l|}{Luzern} &  &\\
+  & Elternbildung LU, disg@lu.ch & Mail & Nein\\
+  
+  \multicolumn{2}{|l|}{Graubünden} &  &\\
+  & Elternbildung Graubünden, info@elternbildung-gr.ch & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{Glarus} &  &\\
+  & Frauenzentrale Glarus, info@frauenzentrale-glarus.ch Ann-Kristin Peterson & Mail & HP, FB, Flyer\\
+  
+  \multicolumn{2}{|l|}{Basel Stadt} &  &\\
+  & Jugend, Familie und Sport, Kontaktformular & Mail & k.R.\\
+  
+  \multicolumn{2}{|l|}{Bern} &  &\\
+  & Gesundheits- und Fürsorgedirektion (GEF) , info@gef.be.ch & Mail & Nein\\
+  
+  \multicolumn{2}{|l|}{Appenzell} &  &\\
+  & Netzwerk Elternbildung Barbara Frischknecht-Schoop und Claudia Bischofberger claudia.bischofberger@ar.ch & Mail & Nein\\
+  
+  \multicolumn{2}{|l|}{Aargau} &  &\\
+  & Elternbildung Aargau info@elternbildung-aargau.ch  & Mail & Nein\\
+  
+\end{longtable}
+
+%Table
+\begin{longtable}[htbp]{|p{0.2em} p{20em} | c | c |} 
+  \caption{Rekrutierung Divers} \label{table:AppRekrutierungDivers}\\
+  
+  \rowcolor{lightgray}
+  \multicolumn{4}{|l|}{Diverse Adressen}\\
+  \hline
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \rowcolor{lightgray}
+  \multicolumn{4}{|c|}{Fortsetzung diverse Adressen}\\
+  \hline
+  \multicolumn{2}{|l|}{Insititution und Adresse} & Anfrage & Verteilung\\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  
+  \multicolumn{2}{|l|}{Magazine, Zeitschriften, Internet} &&\\
+  & Wir Eltern - per Direktformulat & Mail & Marktplatz\\
+  & Fritz und Fränzi - info(at)fritzundfraenzi.ch & Mail & Inserat\\
+  & Swissmom Elternseite info@swissmom.ch & Mail & Forum\\
+  
+  \multicolumn{2}{|l|}{Sonstige} &&\\
+  & Elternbildung Schweiz - Maja Mulle & Mail & FB\\
+  & Frau zu Frau Shop Wilchingen, frauzufrau@gmx.ch & Mail & FB, Flyer\\
+  & marie meierhof institut & Mail & Tips\\
+  & Geburtshaus Schaffhausen (info@geburtshaus-sh.ch) & Mail & Flyer\\
   
 \end{longtable}
