Anpassungen an Kap Ergebnissen -> Sig Ergebnisse ausführen

--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -204,9 +204,9 @@ In diesem Abschnitt sollen zusätzliche Analysen besprochen werden, die über di
 
 In den Hypothesen $H1$ bis $H4$ wurde jeweils die gesamte Mediennutzung für die Berechnung verwendet. Diese wurde jedoch anhand der Unterteilung, ob das Kind wach war oder geschlafen hat, erfasst. Anhand dieser Unterteilung wurde die Berechnung der Hypothesen $H1$ bis $H4$ wiederholt, was zusätzlich zwei Resultate pro Hypothese lieferte: eines bei dem die Mediennutzung bei einem wachen Kind stattgefunden hatte und eines, bei dem das Kind bei der Betreuung geschlafen hatte. Bei keinem der durch diese Unterteilung durchgeführte Berechnung konnte ein signifikantes Ergebnis gefunden werden. Somit scheint es hinsichtlich der Hypothesen keine Rolle zu spielen, ob das Kind während der Betreuung wach war, oder geschlafen hat (siehe Ergebnisse im Anhang \ref{app:ZusammenzugResultate}: \textit{\nameref{app:ZusammenzugResultate}}). 
 
-Zusätzlich zur Unterteilung nach wach und schlafend, wurde die Berechnung von $H1$  anhand aller erfassten Medientätigkeiten wiederholt, aus denen sich die Gesamtnutzung zusammensetzte. Die einzelnen erfassten Medientätigkeiten sind: (1) Telefonieren,  (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher, Magazine, Zeitungen, Comics, etc.), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. Um für diese Tätigkeiten im Bezug zur Bindung einen möglichen Unterschied zu prüfen, wurde wie in $H1$ eine einfaktorielle Varianzanalyse durchgeführt. Bei keinem der elf durchgeführten Berechnungen konnte ein signifikantes Ergebnis gefunden werden. Somit scheint die Mediennutzung (gemessen durch die Anzahl Minuten während der Betreuung) keinen statistisch signifikanten Unterschied ($p>.001$) hinsichtlich einer unsicheren oder sicheren Bindung zu ergeben (siehe einzelne Ergebnisse im Anhang \ref{app:ResultateMedientaetigkeiten}: \textit{\nameref{app:ResultateMedientaetigkeiten}}).
+Zusätzlich zur Unterteilung nach wach und schlafend, wurde die Berechnung von $H1$  anhand aller erfassten Medientätigkeiten wiederholt, aus denen sich die Gesamtnutzung zusammensetzte. Die einzelnen erfassten Medientätigkeiten sind: (1) Telefonieren,  (2) Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.), (3) Emails lesen und bearbeiten, (4) Lesen / anschauen von Printmedien (Bilder-Bücher, Magazine, Zeitungen, Comics, etc.), (5) Internet nutzen (surfen, Informationen suchen, etc.), (6) Musik hören, (7) Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.), (8) Radio hören, (9) Fotos oder Videos machen, (10) Video-Games spielen (Handy, Computer, Konsole, etc.) und (11) Hörspiele oder Hörbücher hören. Um für diese Tätigkeiten im Bezug zur Bindung einen möglichen Unterschied zu prüfen, wurde wie in $H1$ eine einfaktorielle Varianzanalyse durchgeführt. Zwischen dem Schreiben von Textnachrichten und der Bindung konnte ein signifikanter Unterschied ($p<.05$) gefunden werden (F(1,216) = 7.206, $p$=.008, partielles $\eta^2$=.032, $n$=218). 2.8\% der Streuung der Textnachrichten-Werte in Minuten um den Gesamtmittelwert kann durch die Bindung erklärt werden (korrigiertes R-Quadrat). Die Effektstärke nach \citeA{Cohen1988a} liegt bei $f$=.18 und entspricht einem schwachen Effekt. Die beiden Gruppen \enquote{sicher gebunden} ($M$=20.4, $SD$=25.37, $n$=152) und \enquote{unsicher gebunden} ($M$=31.5, $SD$=33.6, $n$=66) unterscheiden sich voneinander. Wurde wiederum das Schreiben von Textnachrichten unterteilt nach \enquote{Kind war wach} und \enquote{Kind hat geschlafen} so ergibt sich ein weiterer statistisch signifikanter Unterschied zwischen Textnachrichten schreiben währendem das Kind wach war und der Bindung (F(1,216) = 11.122, $p$=.001, partielles $\eta^2$=.049, $n$=218). 4.5\% der Streuung der Textnachrichten-Werte in Minuten um den Gesamtmittelwert kann durch die Bindung erklärt werden (korrigiertes R-Quadrat). Effektsärke nach \citeA{Cohen1988a} liegt bei $f$=.23 und entspricht einem schwachen Effekt. Es lassen sich wiederum zwei Gruppen bilden, \enquote{sicher gebunden} ($M$=7.9, $SD$=10.08, $n$=152) und \enquote{unsicher gebunden} ($M$=14.7, $SD$=20.24, $n$=66), die sich voneinander unterscheiden. Bei den restlichen  10 durchgeführten Berechnungen konnte kein statistisch signifikantes Ergebnis gefunden werden. Somit scheint die Mediennutzung, mit Ausnahme der Textnachrichten (gemessen durch die Anzahl Minuten während der Betreuung), keinen statistisch signifikanten Unterschied ($p>.05$) hinsichtlich einer unsicheren oder sicheren Bindung zu ergeben (siehe einzelne Ergebnisse im Anhang \ref{app:ResultateMedientaetigkeiten}: \textit{\nameref{app:ResultateMedientaetigkeiten}}).
 
-Weitere Analysen wurden mittels den erfassten demografischen Daten durchgeführt. Diese wurden im Bezug zu den Erfassten Konstrukten \enquote{Bindung}, \enquote{Mediennutzung}, \enquote{Stress} und \enquote{subjektives Wohlbefinden} in Beziehung gesetzt. Dabei lassen sich die Daten in kategoriale Daten und intervall skalierte Daten unterteilen. Unter kategoriale Daten fallen das Geschlecht, die Einkommensstufen, die Bildungsstufen, das Geschlecht des Kindes und die Lebensform der Eltern. Unter intervall skalierte Daten fallen das Alter der Eltern, das Alter des Kindes in Monaten, die Anzahl Tage der Fremdbetreuung und die Anzahl Personen im Haushalt. Dabei wurden kategorial skalierte Variablen als Faktoren mittels ANOVA bezüglich der erfassten Konstrukte durchgeführt. Die Fragestellung lautete dabei, ob sich die Mittelwerte der abhängigen Variable (z.B.: Bindungsskala \textit{Angst}, Stressindex \textit{Anspannung}, SWB, etc.) bezüglich mehreren Gruppen der unabhängigen Variable statistisch signifikant unterscheiden  (z.B.: Bildung, Geschlecht, Einkommen, etc.). Für intervall skalierte Daten wurde die Berechnung mittels einfacher linearer Regression vorgenommen. Die Fragestellung lautete dabei, ob es einen Zusammenhang zwischen der unabhängigen (z.B.: Prädiktor Alter der Eltern, Alter des Kindes, Anzahl Tage der Fremdbetreuung, etc.) und der abhängigen Variable gibt (z.B.: Kriterium Mediennutzung bei schlafendem Kind, Bindungsskala \textit{Nähe}, etc.). Dabei wurde für keine der oben beschriebene Berechnung ein statistisch signifikantes Ergebnis gefunden. Für insgesamt zwei der insgesamt 99 Kombinationen konnte ein annähernd statistisch signifikantes Ergebnis gefunden werden. Dies wurde zwischen der Bildung und der Bindungsskala \textit{Vertrauen} mittels ANOVA ($F$(7,209) = 3.147, $p$=.003, partielles $\eta^2$=.095, $n$=217) und der Bildung und dem Stressindex \textit{Anpassung} mittels ANOVA ($F$(7,210) = 3.328, $p$=.002, partielles $\eta^2$=.100, $n$=218) gefunden.
+Weitere Analysen wurden mittels den erfassten demografischen Daten durchgeführt. Diese wurden im Bezug zu den Erfassten Konstrukten \enquote{Bindung}, \enquote{Mediennutzung}, \enquote{Stress} und \enquote{subjektives Wohlbefinden} in Beziehung gesetzt. Dabei lassen sich die Daten in kategoriale Daten und intervall skalierte Daten unterteilen. Unter kategoriale Daten fallen das Geschlecht, die Einkommensstufen, die Bildungsstufen, das Geschlecht des Kindes und die Lebensform der Eltern. Unter intervall skalierte Daten fallen das Alter der Eltern, das Alter des Kindes in Monaten, die Anzahl Tage der Fremdbetreuung und die Anzahl Personen im Haushalt. Dabei wurden kategorial skalierte Variablen als Faktoren mittels ANOVA bezüglich der erfassten Konstrukte durchgeführt. Die Fragestellung lautete dabei, ob sich die Mittelwerte der abhängigen Variable (z.B.: Bindungsskala \textit{Angst}, Stressindex \textit{Anspannung}, SWB, etc.) bezüglich mehreren Gruppen der unabhängigen Variable statistisch signifikant unterscheiden  (z.B.: Bildung, Geschlecht, Einkommen, etc.). Für intervall skalierte Daten wurde die Berechnung mittels einfacher linearer Regression vorgenommen. Die Fragestellung lautete dabei, ob es einen Zusammenhang zwischen der unabhängigen (z.B.: Prädiktor Alter der Eltern, Alter des Kindes, Anzahl Tage der Fremdbetreuung, etc.) und der abhängigen Variable gibt (z.B.: Kriterium Mediennutzung bei schlafendem Kind, Bindungsskala \textit{Nähe}, etc.). Für insgesamt zwei der insgesamt 99 Kombinationen konnte ein statistisch signifikantes Ergebnis ($p<.05$) gefunden werden. Dies wurde zwischen der Bildung und der Bindungsskala \textit{Vertrauen} mittels ANOVA ($F$(7,209) = 3.147, $p$=.003, partielles $\eta^2$=.095, $n$=217) und der Bildung und dem Stressindex \textit{Anpassung} mittels ANOVA ($F$(7,210) = 3.328, $p$=.002, partielles $\eta^2$=.100, $n$=218) gefunden.
 
 In einem letzten Schritt wurden Korrelationen zwischen den erfassten Skalen (Bindung, Stresses und \acrshort{swb}) und den einzelnen Medientätigkeiten gebildet (z.B.: Textnachrichten schreiben, Fernseh schauen, etc.).  Bei der Berechnung der Korrelationen wurde von einem ungerichteten Zusammenhang ausgegangen, somit erfolgte die Testung auf Signifikanz zweiseitig \cite{UniversitatZurich2018}. Da mehrere Korrelationen gleichzeitig berechnet wurden, kam der paarweise Fallausschluss zum tragen. Das heisst, dass für jede Korrelation alle Fälle verwendet wurden, die für beide Variablen gültige Werte aufwiesen. Dabei konnte zwischen allen Skalen und der Medientätigkeit \textit{Textnachrichten schreiben} signifikante korrelationen mit einem nach \citeA{Cohen1988a} schwachen Effekt festgestellt werden. Zum Beispiel korrelierte die Bindungsskala \textit{Vertrauen} signifikant mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=-.241, $p$=.000, $n$=217). Diese Skala korrelierte zudem signifikant mit dem Schreiben von Textnachrichten, währendem das Kind geschlafen hat ($r$=-.177, $p$=.009, $n$=217) und dem Fernseh- oder Videos schauen, währendem das Kind wach war ($r$=-.186, $p$=.006, $n$=216). Die Stressskala \textit{Sorgen} korrelierte signifikant mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=.191, $p$=.005, $n$=218). Die Stressskala \textit{Freude} korrelierte signifikant mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=-.197, $p$=.004, $n$=218). Das subjektive Wohlbefinden korreliert signifikant mittels Skala SHS mit dem Schreiben von Textnachrichten, währendem das Kind wach war ($r$=-.179, $p$=.008, $n$=218). Für eine Übersicht der Resultate siehe Anhang \ref{app:Korrelationen}: \textit{\nameref{app:Korrelationen}}.
 
