--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -12,21 +12,23 @@ Aus diesen Hypothesen scheint sich ableiten zu lassen, dass die Bindung der Elte
 
 % ---------------------------------------
 \subsection{Interpretation} \label{sec:Interpretation}
-Hat nun die Bindung keinen Zusammenhang mit der Mediennutzung der Eltern und wird diese nicht auch vom Stress moderiert? Lässt sich zudem kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das folgende Kapitel soll auf einzelne Aspekte näher eingehen und diese zu beantworten versuchen.
+Hat nun die Bindung keinen Zusammenhang mit der Mediennutzung der Eltern und wird diese nicht auch vom Stress moderiert? Lässt sich zudem kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das vorliegende Kapitel soll auf einzelne Aspekte näher eingehen und diese zu beantworten versuchen.
 
-\subsubsection{Interpretation anhand der Stichprobe}\label{sec:InterpretationStichprobe}
+% Stichprobe
 Knapp 91\% der Studienteilnehmer*innen sind weiblich. Nur gerade mal 19 Teilnehmer haben an der Befragung teilgenommen. Diese ungleiche Verteilung könnte unterschiedlich Begründet werden. Einerseits scheint die Rollenverteilung bei der Erziehung von Kleinkindern nach wie vor stärker dem weiblichen Elternteil zuzufallen. Gemäss \citeA{Bien2006} leben zwei drittel der Mütter in Deutschland nach dem traditionellen Familienmodell. Ein weiterer Grund könnte sein, dass der Anreiz der Gutscheine für Männer weniger interessant gewesen ist. Zudem könnte sein, dass Männer generell weniger Interesse an Umfragen haben und deshalb weniger an solchen Studien teilnehmen. Obwohl der ungleichen Verteilung konnte die Fragestellung beantwortet werden, da im Vorfeld kein Einfluss des Geschlechts postuliert wurde.
 
 Ein weiteres auffälliges Merkmal der Stichprobe ist das hohe Bildungslevel der Befragten. 60.6\% gaben an einen Abschluss im tertiären Sektor zu besitzen und 36.2\% gaben an einen Bildungsabschluss im Sekundar II Sektor gemacht zu haben. Gemäss \citeA{Bfs2017} aus dem Jahre 2017 in der Altersgruppe von 25 bis 34 Jährigen haben in der Schweiz 41.8\% einen Sekundar II Abschluss und 50.2\% einen Abschluss auf Tertiärstufe. Die Stichprobe liegt demzufolge leicht über dem schweizerischen Schnitt. Dies könnte auf die starke Rekrutierung aus dem privaten Umfeld des Autors zurückzuführen sein. Zudem scheint die hohe Bildung mit dem Durchschnittsalter der Stichprobe von 33.9 Jahren einher zu gehen. Gemäss \citeA{Bfs2017a} sind  Frauen und Männer mit einer Tertiärbildung tendenziell über 30 Jahre bei ihrem ersten Kind. Obwohl diese Zuordnung nachträglich nicht mehr möglich ist, so kann basierend auf der durchschnittlichen Personen im Haushalt von 3.6 davon ausgegangen werden, dass sich die Stichprobe im Schweizer Mittel bewegt. Ob sich die Bildung, das Einkommen und das Alter auf die Ergebnisse dieser Arbeit auswirken ist schwer zu sagen. Gemäss \citeA{Livingstone2015} haben höher gebildete Eltern mehr Vertrauen in ihre digitalen Fähigkeiten im Umgang mit Medien. Zudem scheinen höher gebildete Eltern mit einem höheren Einkommen digitale Aktivitäten mit ihrem Nachwuchs eher zu reglementieren. Des Weitern sind Soziodemografische Merkmale wichtige Faktoren der Eltern-Kind-Beziehung \cite{Kammerl2012}. Dies scheint in direktem Zusammenhang mit dieser Studie zu stehen. Demzufolge könnten die hohen Bildungsabschlüsse und die hohen Einkommen protektiv auf die Mediennutzung der Eltern im Beisein der Kinder wirken. 
 
-\subsubsection{TBD: Interpretation anhand der Mediennutzung}
-\textit{Mediennutzung interpretieren}
+\textit{TBD: Interpretation anhand der Mediennutzung}
 
-\subsubsection{TBD: Interpretation anhand der erfassten Skalen}
-\textit{TBD:} Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte. Bindung AAS im Vergleich zu den Zahlen von Strange-Situation-Test setzen.
+\textit{TBD: Interpretation anhand der erfassten Skalen}
+Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte. Bindung AAS im Vergleich zu den Zahlen von Strange-Situation-Test setzen.
 
 
-\subsubsection{Zusammenfassende Interpretation}
+\textit{Zusammenfassende Interpretation}
+\begin{itemize}
+    \item Zusammensetzung Stichproben: Hoher Bildungsgrad, hohes Einkommen -> Auswirkung auf 
+\end{itemize}
 
 % ---------------------------------------
 \subsection{TBD: Methodenkritik} \label{sec:Methodenkritik}
